--- a/app/templates/includes/filter_form_label_input_inline.html
+++ b/app/templates/includes/filter_form_label_input_inline.html
@@ -4,13 +4,13 @@
     <p class="display-6">{{ title }}</p>
 {% endif %}
 
-<form method="get" class="form-floating">
+<form method="get" class="d-flex d-inline">
 
 
     {% for field in form %}
-        <div class="row mb-3">
+        <div class="row px-2">
             {{ field.errors }}
-            <label for="{{ field.id_for_label }}" class="col-sm-2 col-form-label">{{ field.label }}</label>
+            <label for="{{ field.id_for_label }}" class="col-auto col-form-label">{{ field.label }}</label>
 
             <div class="col-sm-auto">{{ field }}</div>
 
