--- a/app/templates/includes/progress_bar.html
+++ b/app/templates/includes/progress_bar.html
@@ -26,8 +26,6 @@
         <div id="celery-result"></div>
     </div>
 
-
-
     <script type="text/javascript">
 
         $(document).ready(function () {
@@ -56,12 +54,22 @@
                 }
             }
 
+            function processonTaskError(progressBarElement, progressBarMessageElement, excMessage) {
+                if (message !== undefined && message !== null) {
+
+                    $(progressBarMessageElement).append(
+                        $('<p class="text-center">').text(excMessage)
+                    )
+                }
+            }
+
             // Progress Bar (JQuery)
             $(function () {
                 var progressUrl = "{% url 'celery_progress:task_status' task_id %}";
                 CeleryProgressBar.initProgressBar(progressUrl, {
                     onProgress: processProgress,
                     onResult: processResult,
+                    {#onTaskError: processonTaskError,#}
                 })
             });
         });
