feinschliff nach Inbetriebnahme

--- a/app/templates/app/rack_list.html
+++ b/app/templates/app/rack_list.html
@@ -28,7 +28,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col">Remote report Path</div>
+                        <div class="col">Remote report path</div>
                         <div class="col">{{ rack.report_config.remote_report_path }}</div>
                     </div>
 
