--- a/app/templates/app/rack_detail.html
+++ b/app/templates/app/rack_detail.html
@@ -66,7 +66,12 @@
         {% if not reports %}
             {% if spinner %}
 
-                <div class="d-flex justify-content-center p-4">
+                <div class="text-center p-4">
+
+
+                    <p class="lead">Connecting to {{ rack.ssh_config.hostname }}...</p>
+
+
                     <div class="spinner-border text-secondary" role="status">
                         <span class="visually-hidden">Loading...</span>
                     </div>
